[tool.poetry]
name = "code_executor"
version = "0.1.0"
description = ""
authors = ["timur <timurza@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
python-jose = "^3.3.0"
orjson = "^3.9.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = ["py310"]
include_trailing_comma = true
exclude = '''
(
    \.eggs
  | \.git
  | build
  | dist
  | venv
  | docs
)
'''
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
combine_as_imports = true
remove_redundant_aliases = true
force_grid_wrap = 2
use_parentheses = true
ensure_newline_before_comments = true
